# ChangeLog for sys-fs/davl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/davl/ChangeLog,v 1.4 2009/12/21 14:47:00 ssuominen Exp $

  21 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> davl-1.2.1.ebuild,
  +files/davl-1.2.1-asneeded.patch:
  Fix building with -Wl,--as-needed wrt #248417 by Kevin Pyle.

  29 Oct 2007; Peter Weller <welp@gentoo.org> davl-1.2.1.ebuild:
  Dropped ~amd64 keyword wrt bug 181248

*davl-1.2.1 (28 Jan 2007)

  28 Jan 2007; Raúl Porcel <armin76@gentoo.org> +metadata.xml,
  +davl-1.2.1.ebuild:
  Initial import, bug 120182, thanks to Paul Bredbury <brebs at sent dot com>
  for the initial ebuild
