@@ -1,7 +1,8 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/davl/davl-1.2.1.ebuild,v 1.3 2009/12/21 14:42:08 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/davl/davl-1.2.1.ebuild,v 1.4 2011/03/29 12:56:03 angelos Exp $
 
+EAPI=1
 inherit eutils
 
 DESCRIPTION="Visualizes the fragmentation status of ext2/3 filesystems"
@@ -14,7 +15,7 @@ KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND=">=sys-fs/e2fsprogs-1.38
-	>=x11-libs/gtk+-2.6"
+	>=x11-libs/gtk+-2.6:2"
 
 src_unpack() {
 	unpack ${A}
